--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 0(done). Написать "скелет"
-1. Написать классы "карта" и "колода"
+1(done). Написать классы "карта" и "колода"
+2. Написать базовую заготовку логики игры
