--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 0(done). Написать "скелет"
 1(done). Написать классы "карта" и "колода"
-2. Написать базовую заготовку логики игры
+2(done). Написать базовую заготовку логики игры
+3. Сделать взамодействие с пользователелем
+4. Сделать подсчёт очков
