--- a/TODO
+++ b/TODO
@@ -2,4 +2,4 @@
 1(done). Написать классы "карта" и "колода"
 2(done). Написать базовую заготовку логики игры
 3. Сделать взамодействие с пользователелем
-4. Сделать подсчёт очков
+4(done). Сделать подсчёт очков
