--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 0(done). Написать "скелет"
 1(done). Написать классы "карта" и "колода"
 2(done). Написать базовую заготовку логики игры
-3. Сделать взамодействие с пользователелем
+3(done). Сделать взамодействие с пользователелем
 4(done). Сделать подсчёт очков
+5. Сделать возврат карт в колоду
+6. Сделать ход противника
+7. Ограничить максимум карт до 3-х
