--- a/TODO
+++ b/TODO
@@ -3,6 +3,6 @@
 2(done). Написать базовую заготовку логики игры
 3(done). Сделать взамодействие с пользователелем
 4(done). Сделать подсчёт очков
-5. Сделать возврат карт в колоду
+5(done). Сделать возврат карт в колоду
 6. Сделать ход противника
 7. Ограничить максимум карт до 3-х
