--- a/TODO
+++ b/TODO
@@ -4,5 +4,8 @@
 3(done). Сделать взамодействие с пользователелем
 4(done). Сделать подсчёт очков
 5(done). Сделать возврат карт в колоду
-6. Сделать ход противника
-7. Ограничить максимум карт до 3-х
+6(done). Сделать ход противника
+7(done). Ограничить максимум карт до 3-х
+8. Разнообразить ход противника
+9. Автоматическое открытие карт если у кого-то сумма превысит 21
+10. Автоматическое открытие карт если обоих по 3 карты
