--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@
 5(done). Сделать возврат карт в колоду
 6(done). Сделать ход противника
 7(done). Ограничить максимум карт до 3-х
-8. Разнообразить ход противника
-9. Автоматическое открытие карт если у кого-то сумма превысит 21
-10. Автоматическое открытие карт если обоих по 3 карты
+8(done). Автоматическое открытие карт если у кого-то сумма превысит 21
+9(done). Автоматическое открытие карт если обоих по 3 карты
+10. Разнообразить ход противника
+10a. Метод который проверяет наличие туза
