--- a/TODO
+++ b/TODO
@@ -9,4 +9,4 @@
 8(done). Автоматическое открытие карт если у кого-то сумма превысит 21
 9(done). Автоматическое открытие карт если обоих по 3 карты
 10. Разнообразить ход противника
-10a. Метод который проверяет наличие туза
+10a(done). Метод который проверяет наличие туза
