--- a/TODO
+++ b/TODO
@@ -8,5 +8,5 @@
 7(done). Ограничить максимум карт до 3-х
 8(done). Автоматическое открытие карт если у кого-то сумма превысит 21
 9(done). Автоматическое открытие карт если обоих по 3 карты
-10. Разнообразить ход противника
+10(done). Разнообразить ход противника
 10a(done). Метод который проверяет наличие туза
